Fix display issue with high contrast; fixes #1524

--- a/css/highcontrast.css
+++ b/css/highcontrast.css
@@ -48,7 +48,7 @@ table {
    border-color: #7B3E3E;
 }
 
-.tab_actors, .actor-head, .actor-content {
+.actor-head, .actor-content {
    margin: 0;
    min-height: 25px;
    box-sizing: border-box;
